--- a/etc/nginx/oddslingers-docker-compose.prod.conf
+++ b/etc/nginx/oddslingers-docker-compose.prod.conf
@@ -52,7 +52,7 @@ http {
     server {
         listen                          80 default_server;
 
-        server_name                     oddslingers.com;
+        server_name                     192.168.49.2;
         http2_push_preload              on;
 
         include                         mime.types;
