Fix problems in the quickstart

--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -1,124 +1,145 @@
-aiohttp==3.5.4
-aiosmtplib==1.0.3
-appnope==0.1.0
+aiohttp==3.6.2
+aiosmtplib==1.1.3
 argh==0.26.2
 asgi-redis==1.4.3
 asgiref==1.1.2
-astroid==2.0.4
 async-timeout==3.0.1
-attrs==18.1.0
-autobahn==18.8.1
-Automat==0.7.0
-autopep8==1.3.5
+attrs==19.3.0
+autobahn==20.3.1
+automat==20.2.0
 backcall==0.1.0
-beautifulsoup4==4.7.1
-bleach==3.0.2
-blessings==1.7
-bpython==0.17.1
-certifi==2018.8.24
+beautifulsoup4==4.8.2
+bleach==3.1.4
+certifi==2019.11.28
+cffi==1.14.0
 channels==1.1.8
 chardet==3.0.4
-Click==7.0
-codecov==2.0.15
+click==7.1.1
 constantly==15.1.0
-coverage==4.5.1
-crontab==0.22.4
-curtsies==0.3.0
+crontab==0.22.6
+cryptography==2.8
 daphne==1.4.2
-decorator==4.3.0
-defusedxml==0.5.0
-Django==2.2.10
-django-allauth==0.38.0
-django-anymail==4.3
+decorator==4.4.2
+defusedxml==0.6.0
+distro==1.4.0
+django==2.2.11
+django-allauth==0.41.0
+django-anymail==7.0.0
 django-compat==1.0.15
-django-debug-toolbar==1.10.1
+django-debug-toolbar==2.2
 django-debug-toolbar-template-timings==0.9
-django-dramatiq==0.5.0
-django-extensions==2.1.3
+django-dramatiq==0.9.1
+django-extensions==2.2.8
 django-hijack==2.1.10
-django-pdb==0.6.2
-django-redis==4.9.0
-django-user-sessions==1.6.0
-dramatiq==1.3.0
-flake8==3.6.0
-flake8-formatter-junit-xml==0.0.6
-flake8-junit-report==2.1.0
-Flask==1.0.2
-geoip2==2.9.0
-gevent==1.3.6
-greenlet==0.4.14
-grequests==0.3.0
-html2text==2018.1.9
-html5lib==1.0.1
-hyperlink==18.0.0
-idna==2.7
-idna-ssl==1.1.0
+django-redis==4.11.0
+django-user-sessions==1.7.1
+dramatiq==1.8.1
+flask==1.1.1
+geoip2==3.0.0
+gevent==1.4.0
+greenlet==0.4.15
+grequests==0.4.0
+html2text==2020.1.16
+hyperlink==19.0.0
+idna==2.9
 incremental==17.5.0
-ipdb==0.11
-ipython==7.1.1
+ipython==7.13.0
 ipython-genutils==0.2.0
-isort==4.3.4
 itsdangerous==1.1.0
-jedi==0.12.1
-Jinja2==2.10
-junit-xml==1.8
-lazy-object-proxy==1.3.1
-lxml==4.3.0
-MarkupSafe==1.1.0
+jedi==0.16.0
+jinja2==2.11.1
+lxml==4.5.0
+markupsafe==1.1.1
 matrix-client==0.3.2
-maxminddb==1.4.1
-mccabe==0.6.1
+maxminddb==1.5.2
 msgpack-python==0.5.6
-multidict==4.5.2
-oauthlib==2.1.0
-parso==0.3.1
+multidict==4.7.5
+mypy==0.770
+mypy-extensions==0.4.3
+oauthlib==3.1.0
+parso==0.6.2
 pathtools==0.1.2
-pexpect==4.6.0
-pickleshare==0.7.4
-prometheus-client==0.2.0
-prompt-toolkit==2.0.7
-psutil==5.4.8
-psycopg2-binary==2.7.5
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client==0.7.1
+prompt-toolkit==3.0.4
+psutil==5.7.0
+psycopg2-binary==2.8.4
+psycopg2cffi==2.8.1
 ptyprocess==0.6.0
-pycodestyle==2.4.0
-pyflakes==2.0.0
-Pygments==2.2.0
-PyHamcrest==1.9.0
-pylint==2.1.1
-python-dateutil==2.7.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pygments==2.6.1
+pyhamcrest==2.0.2
+pyopenssl==19.1.0
+python-dateutil==2.8.1
 python-dotenv==0.8.2
 python3-openid==3.1.0
-pytz==2018.5
-PyYAML==4.2b1
-raven==6.9.0
-raven-aiohttp==0.7.0
+pytz==2019.3
+pyyaml==5.3.1
+raven==6.10.0
 redis==2.10.6
-requests==2.20.0
-requests-oauthlib==1.0.0
-ruamel.yaml==0.15.86
-simplegeneric==0.8.1
-six==1.11.0
-soupsieve==1.7.1
-sqlparse==0.2.4
-strictyaml==1.0.0
-tblib==1.3.2
-traitlets==4.3.2
-Twisted==18.7.0
-txaio==18.7.1
-typed-ast==1.1.0
-typing==3.6.6
-typing-extensions==3.7.2
-unittest-xml-reporting==2.2.0
-urllib3==1.23
+requests==2.23.0
+requests-oauthlib==1.3.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+sentry-sdk==0.14.3
+service-identity==18.1.0
+six==1.14.0
+soupsieve==2.0
+sqlparse==0.3.1
+strictyaml==1.0.6
+traitlets==4.3.3
+twisted==20.3.0
+txaio==20.3.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.1
+urllib3==1.25.8
 watchdog==0.8.3
-watchdog-gevent==0.1.0
-wcwidth==0.1.7
+watchdog-gevent==0.1
+wcwidth==0.1.9
 webencodings==0.5.1
-Werkzeug==0.14.1
-wrapt==1.10.11
-yacron==0.8.1
-yarl==1.3.0
-zope.interface==4.5.0
-zulip==0.5.5
-zulip-bots==0.5.6
-zulip-botserver==0.5.5
+werkzeug==1.0.0
+yacron==0.10.0
+yarl==1.4.2
+zope.interface==5.0.1
+zulip==0.6.3
+zulip-bots==0.6.3
+zulip-botserver==0.6.3
+backcall==0.1.0
+blessings==1.7
+bpython==0.18
+certifi==2019.11.28
+chardet==3.0.4
+codecov==2.1.13
+coverage==5.0.4
+curtsies==0.3.1
+decorator==4.4.2
+django-pdb==0.6.2
+entrypoints==0.3
+flake8==3.7.9
+flake8-formatter-junit-xml==0.0.6
+greenlet==0.4.15
+idna==2.9
+ipdb==0.13.2
+ipython==7.13.0
+ipython-genutils==0.2.0
+jedi==0.16.0
+junit-xml==1.9
+mccabe==0.6.1
+parso==0.6.2
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.4
+ptyprocess==0.6.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pygments==2.6.1
+requests==2.23.0
+six==1.14.0
+tblib==1.6.0
+traitlets==4.3.3
+unittest-xml-reporting==3.0.2
+urllib3==1.25.8
+wcwidth==0.1.9
