--- a/core/js/package.json
+++ b/core/js/package.json
@@ -24,7 +24,7 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.2.0",
-    "babel-eslint": "^10.0.1",
+    "@babel/eslint-parser": "^7.5.4",
     "babel-loader": "^8.0.4",
     "babel-plugin-root-import": "^6.1.0",
     "babel-plugin-transform-function-bind": "^6.8.0",
@@ -39,6 +39,7 @@
     "lodash": "^4.17.11",
     "node-gyp": "^3.8.0",
     "node-sass-chokidar": "^1.3.4",
+    "node-sass": "4.14.1",
     "nouislider": "^10.0.0",
     "npm": "^6.4.1",
     "react": "16.6.3",
