--- a/core/js/package.json
+++ b/core/js/package.json
@@ -39,7 +39,7 @@
     "lodash": "^4.17.11",
     "node-gyp": "^3.8.0",
     "node-sass-chokidar": "^1.3.4",
-    "node-sass": "4.14.1",
+    "sass": "*",
     "nouislider": "^10.0.0",
     "npm": "^6.4.1",
     "react": "16.6.3",
