--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,13 +72,13 @@ services:
       context: . 
       dockerfile: ./Dockerfile.webpack
     image: oddslingers:webpack
-    command: sh -c "(npm rebuild node-sass && webpack --mode development --watch --info-verbosity verbose & node-sass-chokidar --watch scss/ -o ../static/css 2>&1  &)| cat"
+    command: sh -c "(webpack --mode development --watch --info-verbosity verbose & saas --watch scss/ -o ../static/css 2>&1  &)| cat"
     stdin_open: true
     tty: true
     environment:
       ODDSLINGERS_ENV: DEV
     volumes:
-      #- ./core/js:/opt/oddslingers.poker/core/js
+      - ./core/js:/opt/oddslingers.poker/core/js
       - ./core/static:/opt/oddslingers.poker/core/static
       # Hide local node_modules
       - ./core/js/node_modules:/src/node_modules
