--- a/core/js/package.json
+++ b/core/js/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.0",
+    "@babel/eslint-parser": "^7.5.4",
     "@babel/node": "^7.2.0",
     "@babel/plugin-syntax-function-bind": "^7.2.0",
     "@babel/plugin-transform-react-constant-elements": "^7.2.0",
@@ -24,7 +25,6 @@
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.2.0",
-    "@babel/eslint-parser": "^7.5.4",
     "babel-loader": "^8.0.4",
     "babel-plugin-root-import": "^6.1.0",
     "babel-plugin-transform-function-bind": "^6.8.0",
@@ -38,8 +38,6 @@
     "howler": "^2.0.15",
     "lodash": "^4.17.11",
     "node-gyp": "^3.8.0",
-    "node-sass-chokidar": "^1.3.4",
-    "sass": "*",
     "nouislider": "^10.0.0",
     "npm": "^6.4.1",
     "react": "16.6.3",
@@ -50,7 +48,8 @@
     "redux-devtools-extension": "^2.13.7",
     "redux-time": "^0.0.29",
     "reselect": "^4.0.0",
-    "sass-lint": "^1.12.1",
+    "sass-lint": "^1.13.1",
+    "sass-loader": "^13.3.2",
     "stylelint": "^9.10.1",
     "webpack": "^4.27.0",
     "webpack-cli": "^3.1.2",
@@ -92,5 +91,8 @@
       "@babel/plugin-transform-runtime",
       "transform-function-bind"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.66.1"
   }
 }
